# hw7

./: .gitignore  PROJECT_REVIEW.md  README.md  main.py  pyproject.toml  read.md
mcp_servers/: budget_server.py  calendar_server.py  travel_server.py
tests/: test_calendaring.py  test_reporting.py  test_storage.py  test_travel.py  test_workflows.py
trip_budget_operator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
trip_operator/: calendaring.py  cli.py  config.py  mcp_client.py  reporting.py  storage.py  travel.py  webapp.py  workflows.py
trip_operator/web/: app.js  index.html  styles.css
